feat(backend): improve Qwen model support by handling inline and external tensor initializers, updating download validations, and streamlining tensor type checks